- Added Android App files - Updated some design - Added Edit button to user's posts - Fixed footer previously covering page content

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,8 @@ body {
 }
 
 .btn {
-	border: 1px solid #004170;
-	background: #0069B5;
+	border: 1px solid #4b606b;
+	background: #5c8294;
 	-webkit-border-radius: 28;
 	-moz-border-radius: 28;
 	border-radius: 5px;
@@ -36,13 +36,32 @@ body {
 }
 
 .btn:hover {
-  background: #004170;
+  background: #486a80;
   text-decoration: bold;
 }
+
+textarea {
+	width: 99%;
+}
+
 
 input, textarea {
 	border: 1px solid #004170;
 	background-color: #0081D1;
+}
+
+
+ol {
+	padding: 0;
+}
+
+li {
+	list-style-type: none;
+
+}
+
+nav ol li {
+	display: inline-block;
 }
 
 .page_wrapper {
@@ -60,22 +79,15 @@ input, textarea {
 	text-align: center;
 	padding-bottom: 0.5em;
 
+	overflow: visible;
+	z-index: 99;
+
+	position: fixed;
 
 	top: 0;
 	width: 100%;
-}
 
-ol {
-	padding: 0;
-}
-
-li {
-	list-style-type: none;
-
-}
-
-nav ol li {
-	display: inline-block;
+	border-bottom: 1px solid black;
 }
 
 nav ol li a {
@@ -93,44 +105,52 @@ nav ol li a {
 	width: 80%;
 	max-width: 60em;
 	min-width: 40em;
+	min-height: 30em;
 
 	margin: 0 auto;
-	margin-top: 2em;
+	margin-top: 7.5em;
+	margin-bottom: 7.5em;
 }
 
 .footer {
 	padding-top: 0.5em;
 	text-align: center;
-	margin-top: 2em;
 	background-color: #0069B5;
 
 	bottom: 0;
 	width: 100%;
 	height: 60px;
 
-	position: absolute;
+	border-top: 1px solid black;
+
+	bottom: 0;
+
+	position: fixed;
+
+	overflow: visible;
+	z-index: 98;
 }
 
 .bordered {
+	border: solid #0069B5 2px;
+	-webkit-box-shadow: 0px -2px 2px 0px #0069B5;
+	box-shadow: 0px -2px 2px 0px #0069B5;
 	padding: .5em;
-	border: 1px solid;
-	border-radius: 5px;
 }
 
 .inner_container {
 	background-color: rgba(255,255,255,0.25);
-
-	border: 1px solid;
 	border-radius: 5px;
 
 	padding: 1em;
 
 	margin: 1em 0;
+
+	position: relative;
 }
 
 .forum_list {
 	background-color: rgba(255,255,255,0.25);
-	border: 1px solid;
 	border-radius: 5px;
 
 	margin: .1em 0;
@@ -170,8 +190,12 @@ nav ol li a {
 }
 
 .view_topic_post_text {
-	border: 1px solid;
 	border-radius: 5px;
 
 	padding: 1em;
+}
+
+.stick_right {
+	position: absolute;
+	right: .5em;
 }
